<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tic-Tac-Toe</string>
    <string name="main_menu">main menu</string>
    <string name="vsAndroid">vs. Android</string>
    <string name="vsHuman">vs. Human</string>
    <string name="quit">Quit</string>
    <string name="three_by_three">3x3</string>
    <string name="four_by_four">4x4</string>
    <string name="first_human">Start the game!</string>
    <string name="turn_human">It\'s your turn to play!</string>
    <string name="turn_computer">Computer\'s turn.</string>
    <string name="turn_player_one">Player 1 turn.</string>
    <string name="turn_player_two">Player 2 turn.</string>
    <string name="result_tie">It\'s a tie!</string>
    <string name="result_human_wins">You won!</string>
    <string name="result_android_wins">Android won!</string>
    <string name="result_player_one_wins">Player 1 wins!</string>
    <string name="result_player_two_wins">Player 2 wins!</string>
    <string name="info">game info</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="fourteen">14</string>
    <string name="fifteen">15</string>
    <string name="sixteen">16</string>
    <string name="newGame_label">New Game</string>
    <string name="exitGame_label">Exit Game</string>
    <string name="title_activity_name">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="player1_get_name_header">Player 1:</string>
    <string name="player2_get_name_header">Player 2:</string>
    <string name="edit_hint">enter name..</string>

</resources>