<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvMainMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/main_menu"
            android:textColor="#FFFF8800"
            android:textSize="50sp" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rDimensions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb3x3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:text="@string/three_by_three" 
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rb4x4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|right"
            android:text="@string/four_by_four" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/bHumanVsAndroid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/vsAndroid" />

        <Button
            android:id="@+id/bHumanVsHuman"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/vsHuman" />

        <Button
            android:id="@+id/bExit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/quit" />
    </LinearLayout>

</LinearLayout>