<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvPlayer1Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:text="@string/player1_get_name_header" />

        <EditText
            android:id="@+id/etPlayer1Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:maxLength="25"
            android:hint="@string/edit_hint">

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvPlayer2Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:text="@string/player2_get_name_header" />

        <EditText
            android:id="@+id/etPlayer2Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:maxLength="25"
            android:hint="@string/edit_hint">

            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/bDoneNames"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center|center_horizontal"
        android:text="Start!" />

</LinearLayout>